--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,12 @@
 @import url(assets/css/variables.css);
 @import url(assets/css/errors.css);
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
+
+app-home {
+    overflow: hidden;
+}
